# PWD-manager-generator

./: .gitignore  CMakeLists.txt  README.md  defs.h  helperFunction.c  helperFunction.h  main.c  main.h  makefile
include/: defs.h  helperFunction.h  main.h
source/: helperFunction.c  main.c
